--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<a class="twitter-timeline" href="https://twitter.com/blackthunderfll?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a>
 				</div>
 				<footer>
-					&copy; Copyright Black Thunder 2018
+					&copy; Copyright Black Thunder FLL 2018
 				</footer>
 			</div>
 		</main>
