--- a/remove.html
+++ b/remove.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="/cookies.js"></script>
+		<script src="/assets/cookies.js"></script>
 	</head>
 	<script>
 		Cookies.remove("blackThunderFLLCookiePolicy__Accepted")
