--- a/cookieSplash/index.html
+++ b/cookieSplash/index.html
@@ -30,12 +30,14 @@
 	</head>
 	<body>
 		<div id='nav'>
-			<nav>
-				<img class='nameplate' src='/graphics/nameplate-thick.png'>
-				<img class='logo1' src='/graphics/logoleft.png'>
-				<img class='logo2' src='/graphics/logo.png'>
-			</nav>
-			<div class='nav-fade'></div>
+			<a href="/" style="text-decoration: none;">
+				<nav>
+					<img class='nameplate' src='/graphics/nameplate-thick.png'>
+					<img class='logo1' src='/graphics/logoleft.png'>
+					<img class='logo2' src='/graphics/logo.png'>
+				</nav>
+				<div class='nav-fade'></div>
+			</a>
 		</div>
 		<main>
 			<div class="script-only">
