--- a/cookieSplash/index.html
+++ b/cookieSplash/index.html
@@ -64,7 +64,8 @@
 				<a class="button" href="/privacy-policy">Our Privacy Policy</a>
 			</noscript>
 			<footer>
-				&copy; Copyright Black Thunder FLL 2018
+				<span style="float:left;clear:left;">&copy; Copyright Black Thunder FLL 2018</span>
+				<a href="/privacy-policy" style="float:right;clear:right;">Privacy Policy</a>
 			</footer>
 		</main>
 	</body>
