--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -45,8 +45,9 @@
 				<br>
 				To control cookies on your device, visit <a href="http://www.youronlinechoices.eu/">http://www.youronlinechoices.eu/</a>.
 			</p>
-			<footer>
-				&copy; Copyright Black Thunder FLL 2018
+			<footer style="margin-top: 50px;">
+				<span style="float:left;clear:left;">&copy; Copyright Black Thunder FLL 2018</span>
+				<a href="/privacy-policy" style="float:right;clear:right;">Privacy Policy</a>
 			</footer>
 		</main>
 	</body>
