Move footer position

--- a/cookieSplash/index.html
+++ b/cookieSplash/index.html
@@ -63,7 +63,7 @@
 				</p>
 				<a class="button" href="/privacy-policy">Our Privacy Policy</a>
 			</noscript>
-			<footer>
+			<footer style="margin-top:50px;">
 				<span style="float:left;clear:left;">&copy; Copyright Black Thunder FLL 2018</span>
 				<a href="/privacy-policy" style="float:right;clear:right;">Privacy Policy</a>
 			</footer>
