--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -45,7 +45,7 @@
 				<br>
 				To control cookies on your device, visit <a href="http://www.youronlinechoices.eu/">http://www.youronlinechoices.eu/</a>.
 			</p>
-			<footer style="margin-top: 50px;">
+			<footer>
 				<span style="float:left;clear:left;">&copy; Copyright Black Thunder FLL 2018</span>
 				<a href="/privacy-policy" style="float:right;clear:right;">Privacy Policy</a>
 			</footer>
