--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 					<a class="twitter-timeline" href="https://twitter.com/blackthunderfll?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a>
 				</div>
 				<footer>
-					<span style="float:left;clear:left;">&copy; Copyright Black Thunder FLL 2018</span>
-					<a href="/privacy-policy" style="float:right;clear:right;">Privacy Policy</a>
+					<span>&copy; Copyright Black Thunder FLL 2018</span>
+					<a href="/privacy-policy">Privacy Policy</a>
 				</footer>
 			</div>
 		</main>
