--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -46,8 +46,8 @@
 				To control cookies on your device, visit <a href="http://www.youronlinechoices.eu/">http://www.youronlinechoices.eu/</a>.
 			</p>
 			<footer>
-				<span style="float:left;clear:left;">&copy; Copyright Black Thunder FLL 2018</span>
-				<a href="/privacy-policy" style="float:right;clear:right;">Privacy Policy</a>
+				<span>&copy; Copyright Black Thunder FLL 2018</span>
+				<a href="/privacy-policy">Privacy Policy</a>
 			</footer>
 		</main>
 	</body>
