--- a/cookieSplash/index.html
+++ b/cookieSplash/index.html
@@ -64,8 +64,8 @@
 				<a class="button" href="/privacy-policy">Our Privacy Policy</a>
 			</noscript>
 			<footer>
-				<span style="float:left;clear:left;">&copy; Copyright Black Thunder FLL 2018</span>
-				<a href="/privacy-policy" style="float:right;clear:right;">Privacy Policy</a>
+				<span>&copy; Copyright Black Thunder FLL 2018</span>
+				<a href="/privacy-policy">Privacy Policy</a>
 			</footer>
 		</main>
 	</body>
