--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<a class="twitter-timeline" href="https://twitter.com/blackthunderfll?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a>
 				</div>
 				<footer>
-					<span>&copy; Copyright Black Thunder FLL 2018</span>
+					<span>&copy; Copyright Black Thunder FLL 2018</span> | 
 					<a href="/privacy-policy">Privacy Policy</a>
 				</footer>
 			</div>
