--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -46,7 +46,7 @@
 				To control cookies on your device, visit <a href="http://www.youronlinechoices.eu/">http://www.youronlinechoices.eu/</a>.
 			</p>
 			<footer>
-				<span>&copy; Copyright Black Thunder FLL 2018</span>
+				<span>&copy; Copyright Black Thunder FLL 2018</span> | 
 				<a href="/privacy-policy">Privacy Policy</a>
 			</footer>
 		</main>
