Change redirect location when cookies not accepted

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			// CHECK COOKIE POLICY HAS BEEN ACCEPTED //
 
 			if(Cookies.get("blackThunderFLLCookiePolicy__Accepted") != "true") {
-				window.location = "cookieSplash/index.html"
+				window.location = "/cookieSplash"
 			}
 
 			// END OF COOKIE POLICY CHECK //
