Fix spelling error

--- a/cookieSplash/index.html
+++ b/cookieSplash/index.html
@@ -58,7 +58,7 @@
 				</style>
 				<h1>Error</h1>
 				<p>
-					We use cookies on this site, and other features that involve JavaScript. If you have disaabled JavaScript, please re-enable it. 
+					We use cookies on this site, and other features that involve JavaScript. If you have disabled JavaScript, please re-enable it. 
 					If you are unsure what Javascript is, or have not disabled it, you are probably viewing this page on an older computer, in which case please upgrade to a newer device.
 				</p>
 				<a class="button" href="/privacy-policy">Our Privacy Policy</a>
