Fix cookies error

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -9,6 +9,7 @@
 		<meta name='author' content='Black Thunder'/>
 		<link rel="shortcut icon" href="/graphics/logo-round.ico" />
 		<script src="/assets/jquery-3.2.1.min.js"></script>
+		<script src="/assets/cookies.js"></script>
 		<link rel="stylesheet" type="text/css" href="/assets/global.css">
 		<link rel="stylesheet" type="text/css" href="/assets/privacy-policy.css">
 		<script>
