Fix syntax error

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -14,10 +14,10 @@
 		<link rel="stylesheet" type="text/css" href="/assets/privacy-policy.css">
 		<script>
 			if(Cookies.get("blackThunderFLLCookiePolicy__Accepted") == "true") {
-				$(".button").show()
+				$(".button").show();
 			}
 			function removeCookies() {
-				Cookies.remove("blackThunderFLLCookiePolicy__Accepted")
+				Cookies.remove("blackThunderFLLCookiePolicy__Accepted");
 			}
 		</script>
 	</head>
