Remove privacy policy link

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -63,7 +63,7 @@
 				If you are unsure what Javascript is, or have not disabled it, you are probably viewing this page on an older computer, in which case please upgrade to a newer device.
 			</noscript>
 			<footer>
-				&copy; Copyright Black Thunder FLL 2018 | <a href="/privacy-policy">Privacy Policy</a>
+				&copy; Copyright Black Thunder FLL 2018
 			</footer>
 		</main>
 	</body>
