Change JS location

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -10,12 +10,10 @@
 		<link rel="shortcut icon" href="/graphics/logo-round.ico" />
 		<script src="/assets/jquery-3.2.1.min.js"></script>
 		<script src="/assets/cookies.js"></script>
+		<script src="/assets/privacy-policy.js"></script>
 		<link rel="stylesheet" type="text/css" href="/assets/global.css">
 		<link rel="stylesheet" type="text/css" href="/assets/privacy-policy.css">
 		<script>
-			if(Cookies.get("blackThunderFLLCookiePolicy__Accepted") == "true") {
-				$(".button").show();
-			}
 			function removeCookies() {
 				Cookies.remove("blackThunderFLLCookiePolicy__Accepted");
 			}
