Edit buttons to allow disabling

--- a/cookieSplash/index.html
+++ b/cookieSplash/index.html
@@ -47,8 +47,8 @@
 				<p>
 					By continuing to use this site, you agree to the use of cookies from AddThis, Google Analytics, and Black Thunder FLL.
 				</p>
-				<button class="button" onclick="acceptCookies()">Agree</button>
-				<a class="button" href="/privacy-policy">Privacy Policy</a>
+				<button class="button button-enabled" onclick="acceptCookies()">Agree</button>
+				<a class="button button-enabled" href="/privacy-policy">Privacy Policy</a>
 			</div>
 			<noscript>
 				<style>
