Add link to home

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -30,6 +30,7 @@
 			</a>
 		</div>
 		<main style="text-align:left;">
+			<h2><a style="text-decoration:none;color:white;" href="/">< Home</a></h2>
 			<h1>
 				Privacy Policy
 			</h1>
