Remove extra privacy policy link

--- a/cookieSplash/index.html
+++ b/cookieSplash/index.html
@@ -64,7 +64,7 @@
 				<a class="button" href="/privacy-policy">Our Privacy Policy</a>
 			</noscript>
 			<footer>
-				&copy; Copyright Black Thunder FLL 2018 | <a href="/privacy-policy">Privacy Policy</a>
+				&copy; Copyright Black Thunder FLL 2018
 			</footer>
 		</main>
 	</body>
