--- a/test.html
+++ b/test.html
@@ -119,11 +119,11 @@ element.parentNode.removeChild(element);
 				</style>
 			</noscript>
 			<div class='YTContainer'>
-				<iframe id='YTChannel' src="https://www.youtube.com/embed/?listType=playlist&list=UUJP8htcgaZxm28hY3yX6WBw&autoplay=0" frameborder="0" allowfullscreen></iframe>
-				<iframe id='blog' src="https://blackthunderrobotics.wordpress.com/" frameborder="0"></iframe>
-				<div id='twitterContainer'>
-					<a class="twitter-timeline" href="https://twitter.com/blackthunderfll?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a>
-				</div>
+				<!-- <iframe id='YTChannel' src="https://www.youtube.com/embed/?listType=playlist&list=UUJP8htcgaZxm28hY3yX6WBw&autoplay=0" frameborder="0" allowfullscreen></iframe> -->
+				<!-- <iframe id='blog' src="https://blackthunderrobotics.wordpress.com/" frameborder="0"></iframe> -->
+				<!-- <div id='twitterContainer'> -->
+					<!-- <a class="twitter-timeline" href="https://twitter.com/blackthunderfll?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a> -->
+				<!-- </div> -->
 				<footer>
 					&copy; Copyright Black Thunder FLL 2018 | <a href="/privacy-policy">Privacy Policy</a>
 				</footer>
