--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="/assets/roboto-mono.css" rel="stylesheet">
-		<title>Black Thunder | FLL</title>
+		<title>Black Thunder FLL</title>
 		<meta charset="utf-8"/>
 		<meta name="description" content="Black Thunder: A FLL team from Reading School, UK">
 		<meta name='author' content='Black Thunder'/>
@@ -38,6 +38,7 @@
 			<button onclick="skip()" id='skip'><span>Skip</span></button>
 		</div>
 		<main>
+			<h3>Blog</h3>
 			<h1 id='typedTitle'>
 				<noscript>
 					Welcome
