--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<button onclick="skip()" id='skip'><span>Skip</span></button>
 		</div>
 		<main>
-			<h3>Blog</h3>
+			<h3><a href="https://blackthunderfll.blogspot.com" style="text-decoration:none;">Blog</a></h3>
 			<h1 id='typedTitle'>
 				<noscript>
 					Welcome
