--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<button onclick="skip()" id='skip'><span>Skip</span></button>
 		</div>
 		<main>
-			<h3"><a class="blog-link" href="https://blackthunderfll.blogspot.com">Blog</a></h3>
+			<h3 class="blog-link"><a href="https://blackthunderfll.blogspot.com">Blog</a></h3>
 			<h1 id='typedTitle'>
 				<noscript>
 					Welcome
