--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a604622fcaa9380"></script>
 		<link rel="stylesheet" type="text/css" href="/assets/home.css">
 		<link rel="stylesheet" type="text/css" href="/assets/global.css">
+		<!--TMP-->
+		<link rel="stylesheet" type="text/css" href="assets/home.css">
 		<script>
 			// CHECK COOKIE POLICY HAS BEEN ACCEPTED //
 
@@ -35,10 +37,27 @@
 				</nav>
 				<div class='nav-fade'></div>
 			</a>
+			<div class="fancy-button">
+				<button onclick="skip()">
+					<span class="text">Skip</span>
+					<span class="line -right"></span>
+					<span class="line -top"></span>
+					<span class="line -left"></span>
+					<span class="line -bottom"></span>
+				</button>
+			</div>
 			<button onclick="skip()" id='skip'><span>Skip</span></button>
 		</div>
 		<main>
-			<h3 class="blog-link"><a href="https://blackthunderfll.blogspot.com">Blog</a></h3>
+			<h3 class="fancy-button">
+				<a href="https://blackthunderfll.blogspot.com">
+					<span class="text">Blog</span>
+					<span class="line -right"></span>
+					<span class="line -top"></span>
+					<span class="line -left"></span>
+					<span class="line -bottom"></span>
+				</a>
+			</h3>
 			<h1 id='typedTitle'>
 				<noscript>
 					Welcome
