--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 				<div class='nav-fade'></div>
 			</a>
 			<div class="fancy-button">
-				<button onclick="skip()">
-					<span class="text">Skip</span>
+				<a>
+					<span class="text"><button onclick="skip()">Skip</button></span>
 					<span class="line -right"></span>
 					<span class="line -top"></span>
 					<span class="line -left"></span>
 					<span class="line -bottom"></span>
-				</button>
+				</a>
 			</div>
 			<button onclick="skip()" id='skip'><span>Skip</span></button>
 		</div>
