--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 			</a>
 			<div class="fancy-button">
 				<a>
-					<span class="text"><button onclick="skip()">Skip</button></span>
+					<span class="text"><button onclick="skip()" id="skip">Skip</button></span>
 					<span class="line -right"></span>
 					<span class="line -top"></span>
 					<span class="line -left"></span>
 					<span class="line -bottom"></span>
 				</a>
 			</div>
-			<button onclick="skip()" id='skip'><span>Skip</span></button>
+			<!-- <button onclick="skip()" id='skip'><span>Skip</span></button> -->
 		</div>
 		<main>
 			<h3 class="fancy-button">
