--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</nav>
 				<div class='nav-fade'></div>
 			</a>
-			<div class="fancy-button">
+			<div class="fancy-button skip-button">
 				<a>
 					<span class="text"><button onclick="skip()" id="skip">Skip</button></span>
 					<span class="line -right"></span>
@@ -49,7 +49,7 @@
 			<!-- <button onclick="skip()" id='skip'><span>Skip</span></button> -->
 		</div>
 		<main>
-			<h3 class="fancy-button">
+			<h3 class="fancy-button blog-link">
 				<a href="https://blackthunderfll.blogspot.com">
 					<span class="text">Blog</span>
 					<span class="line -right"></span>
