--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<!-- <button onclick="skip()" id='skip'><span>Skip</span></button> -->
 		</div>
 		<main>
-			<h3 class="fancy-button blog-link">
+			<div class="fancy-button blog-link">
 				<a href="https://blackthunderfll.blogspot.com">
 					<span class="text">Blog</span>
 					<span class="line -right"></span>
@@ -57,7 +57,7 @@
 					<span class="line -left"></span>
 					<span class="line -bottom"></span>
 				</a>
-			</h3>
+			</div>
 			<h1 id='typedTitle'>
 				<noscript>
 					Welcome
