--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 				<div class='nav-fade'></div>
 			</a>
 			<div class="fancy-button skip-button">
-				<a>
-					<span class="text"><button onclick="skip()" id="skip">Skip</button></span>
+				<a href="javascript:skip()">
+					<!-- <span class="text"><button onclick="skip()" id="skip">Skip</button></span> -->
+					<span class="text">Skip</span>
 					<span class="line -right"></span>
 					<span class="line -top"></span>
 					<span class="line -left"></span>
