--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
 			<!-- <button onclick="skip()" id='skip'><span>Skip</span></button> -->
 		</div>
 		<main>
-			<div class="fancy-button blog-link">
-				<a href="https://blackthunderfll.blogspot.com">
-					<span class="text">Blog</span>
-					<span class="line -right"></span>
-					<span class="line -top"></span>
-					<span class="line -left"></span>
-					<span class="line -bottom"></span>
-				</a>
-			</div>
+			<!-- <div class="fancy-button blog-link"> -->
+				<!-- <a href="https://blackthunderfll.blogspot.com"> -->
+					<!-- <span class="text">Blog</span> -->
+					<!-- <span class="line -right"></span> -->
+					<!-- <span class="line -top"></span> -->
+					<!-- <span class="line -left"></span> -->
+					<!-- <span class="line -bottom"></span> -->
+				<!-- </a> -->
+			<!-- </div> -->
 			<h1 id='typedTitle'>
 				<noscript>
 					Welcome
