--- a/index.html
+++ b/index.html
@@ -37,27 +37,31 @@
 				</nav>
 				<div class='nav-fade'></div>
 			</a>
-			<div class="fancy-button skip-button">
-				<a href="javascript:skip()">
-					<!-- <span class="text"><button onclick="skip()" id="skip">Skip</button></span> -->
-					<span class="text">Skip</span>
-					<span class="line -right"></span>
-					<span class="line -top"></span>
-					<span class="line -left"></span>
-					<span class="line -bottom"></span>
-				</a>
+			<div class="skip-button-container">
+				<div class="fancy-button skip-button">
+					<a href="javascript:skip()">
+						<!-- <span class="text"><button onclick="skip()" id="skip">Skip</button></span> -->
+						<span class="text">Skip</span>
+						<span class="line -right"></span>
+						<span class="line -top"></span>
+						<span class="line -left"></span>
+						<span class="line -bottom"></span>
+					</a>
+				</div>
 			</div>
 			<!-- <button onclick="skip()" id='skip'><span>Skip</span></button> -->
 		</div>
 		<main>
-			<!-- <div class="fancy-button blog-link"> -->
-				<!-- <a href="https://blackthunderfll.blogspot.com"> -->
-					<!-- <span class="text">Blog</span> -->
-					<!-- <span class="line -right"></span> -->
-					<!-- <span class="line -top"></span> -->
-					<!-- <span class="line -left"></span> -->
-					<!-- <span class="line -bottom"></span> -->
-				<!-- </a> -->
+			<!-- <div class="blog-link-container"> -->
+				<!-- <div class="fancy-button blog-link"> -->
+					<!-- <a href="https://blackthunderfll.blogspot.com"> -->
+						<!-- <span class="text">Blog</span> -->
+						<!-- <span class="line -right"></span> -->
+						<!-- <span class="line -top"></span> -->
+						<!-- <span class="line -left"></span> -->
+						<!-- <span class="line -bottom"></span> -->
+					<!-- </a> -->
+				<!-- </div> -->
 			<!-- </div> -->
 			<h1 id='typedTitle'>
 				<noscript>
