--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</nav>
 				<div class='nav-fade'></div>
 			</a>
-			<div class="skip-button-container">
+			<!-- <div class="skip-button-container"> -->
 				<div class="fancy-button skip-button">
 					<a href="javascript:skip()">
 						<!-- <span class="text"><button onclick="skip()" id="skip">Skip</button></span> -->
@@ -47,7 +47,7 @@
 						<span class="line -left"></span>
 						<span class="line -bottom"></span>
 					</a>
-				</div>
+				<!-- </div> -->
 			</div>
 			<!-- <button onclick="skip()" id='skip'><span>Skip</span></button> -->
 		</div>
