--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					We are Black Thunder: a First LEGO League team from Reading School, UK. We are a group of around 40 11-16 year olds who enjoy robotics, and meet each Friday after school, to work on robot-related tasks; one of them is the FLL.
 					<br>
 					<br>
-					We have a blog, YouTube channel and Twitter feed, all of which can be seen below.
+					We have a blog, YouTube channel and Twitter feed; our YouTube channel and Twitter feed can be seen below.
 				</noscript>
 			</p>
 			<noscript>
@@ -85,7 +85,6 @@
 			</noscript>
 			<div class='YTContainer'>
 				<iframe id='YTChannel' src="https://www.youtube.com/embed/?listType=playlist&list=UUJP8htcgaZxm28hY3yX6WBw&autoplay=0" frameborder="0" allowfullscreen></iframe>
-				<iframe id='blog' src="https://blackthunderrobotics.wordpress.com/" frameborder="0"></iframe>
 				<div id='twitterContainer'>
 					<a class="twitter-timeline" href="https://twitter.com/blackthunderfll?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a>
 				</div>
