--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			</h1>
 			<p id='typedText'>
 				<noscript>
-					We are Black Thunder: a First LEGO League team from Reading School, UK. We are a group of around 40 11-16 year olds who enjoy robotics, and meet each Friday after school, to work on robot-related tasks; one of them is the FLL.
+					We are Black Thunder: a FIRST LEGO League team from Reading School, UK. We are a group of around 40 11-16 year olds who enjoy robotics, and meet each Friday after school, to work on robot-related tasks; one of them is the FLL.
 					<br>
 					<br>
 					We have a blog, YouTube channel and Twitter feed; our YouTube channel and Twitter feed can be seen below.
