Remove unnecessary code

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<main>
-			<div class="fancy-button blog-link">
+			<div class="fancy-button">
 				<a href="https://blackthunderfll.blogspot.com/">
 					<span class="text">Blog</span>
 					<span class="line -right"></span>
