--- a/cookieSplash/index.html
+++ b/cookieSplash/index.html
@@ -40,6 +40,15 @@
 			</a>
 		</div>
 		<main>
+			<div class="fancy-button">
+				<a href="https://blackthunderfll.blogspot.com/">
+					<span class="text">Blog</span>
+					<span class="line -right"></span>
+					<span class="line -top"></span>
+					<span class="line -left"></span>
+					<span class="line -bottom"></span>
+				</a>
+			</div>
 			<div class="script-only">
 				<h1>
 					We Use Cookies on Our Site
