Add blog link and change home link to fancy button

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -30,7 +30,24 @@
 			</a>
 		</div>
 		<main style="text-align:left;">
-			<h2><a style="text-decoration:none;color:white;" href="/">< Home</a></h2>
+			<div class="fancy-button">
+				<a href="/">
+					<span class="text">Home</span>
+					<span class="line -right"></span>
+					<span class="line -top"></span>
+					<span class="line -left"></span>
+					<span class="line -bottom"></span>
+				</a>
+			</div>
+			<div class="fancy-button">
+				<a href="https://blackthunderfll.blogspot.com/">
+					<span class="text">Blog</span>
+					<span class="line -right"></span>
+					<span class="line -top"></span>
+					<span class="line -left"></span>
+					<span class="line -bottom"></span>
+				</a>
+			</div>
 			<h1>
 				Privacy Policy
 			</h1>
