Change text alignment

--- a/cookieSplash/index.html
+++ b/cookieSplash/index.html
@@ -28,7 +28,7 @@
 			// END OF COOKIE POLICY CHECK //
 		</script>
 	</head>
-	<body>
+	<body class="body">
 		<div id='nav'>
 			<a href="/" style="text-decoration: none;">
 				<nav>
