--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -40,7 +40,7 @@
 				</a>
 			</div>
 			<div class="fancy-button">
-				<a href="https://blackthunderfll.blogspot.com/">
+				<a href="https://blog.blackthunderfll.ga/">
 					<span class="text">Blog</span>
 					<span class="line -right"></span>
 					<span class="line -top"></span>
