Update blog link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</div>
 		<main>
 			<div class="fancy-button">
-				<a href="https://blackthunderfll.blogspot.com/">
+				<a href="https://blog.blackthunderfll.ga/">
 					<span class="text">Blog</span>
 					<span class="line -right"></span>
 					<span class="line -top"></span>
