Make editing main content more efficient Code takes title & main content from <noscript> tag in main HTML, so text only has to be changed in one place.

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 				</a>
 			</div>
 			<h1 id='typedTitle'>
-				<noscript>
+				<noscript id="typedTitleContent">
 					Welcome
 				</noscript>
 			</h1>
 			<p id='typedText'>
-				<noscript>
+				<noscript id="typedTextContent">
 					We are Black Thunder: a FIRST LEGO League team from Reading School, UK. We are a group of around 40 11-16 year olds who enjoy robotics, and meet each Friday after school, to work on robot-related tasks; one of them is the FLL.
 					<br>
 					<br>
