Add 'contact us' instructions

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 					<br>
 					<br>
 					We have a blog, YouTube channel and Twitter feed; our YouTube channel and Twitter feed can be seen below.
+					<br>
+					<br>
+					To contact us, please email us at <a href="mailto:contact@blackthunderfll.ga">contact@blackthunderfll.ga</a>.
 				</noscript>
 			</p>
 			<noscript>
