--- a/cookieSplash/index.html
+++ b/cookieSplash/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="/assets/roboto-mono.css" rel="stylesheet">
-		<title>Black Thunder | FLL</title>
+		<title>Black Thunder FLL</title>
 		<meta charset="utf-8"/>
 		<meta name="description" content="Black Thunder: A FLL team from Reading School, UK">
 		<meta name='author' content='Black Thunder'/>
@@ -17,14 +17,14 @@
 			if(Cookies.get("blackThunderFLLCookiePolicy__Accepted") == "true") {
 				window.location = "/"
 			}
-			
+
 			function acceptCookies() {
 				if(Cookies.get("blackThunderFLLCookiePolicy__Accepted") != "true") {
 					Cookies.set("blackThunderFLLCookiePolicy__Accepted", "true", {expires: 30});
 					window.location = "/"
 				}
 			}
-			
+
 			// END OF COOKIE POLICY CHECK //
 		</script>
 	</head>
@@ -67,7 +67,7 @@
 				</style>
 				<h1>Error</h1>
 				<p>
-					We use cookies on this site, and other features that involve JavaScript. If you have disabled JavaScript, please re-enable it. 
+					We use cookies on this site, and other features that involve JavaScript. If you have disabled JavaScript, please re-enable it.
 					If you are unsure what Javascript is, or have not disabled it, you are probably viewing this page on an older computer, in which case please upgrade to a newer device.
 				</p>
 				<a class="button" href="/privacy-policy">Our Privacy Policy</a>
