--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="/assets/roboto-mono.css" rel="stylesheet">
-		<title>Privacy Policy | Black Thunder | FLL</title>
+		<title>Privacy Policy | Black Thunder FLL</title>
 		<meta charset="utf-8"/>
 		<meta name="description" content="Black Thunder: A FLL team from Reading School, UK">
 		<meta name='author' content='Black Thunder'/>
@@ -52,7 +52,7 @@
 				Privacy Policy
 			</h1>
 			<p>
-				A cookie is a small text file which is automatically saved on your computer when you visit our website, and is used to 
+				A cookie is a small text file which is automatically saved on your computer when you visit our website, and is used to
 				help track activity across a website. We (Black Thunder FLL) use cookies on our website for the following purposes:
 			</p>
 			<ul>
@@ -74,7 +74,7 @@
 			<br>
 			<button class="button script-only" onclick="removeCookies();changeButtonContent();" style="cursor:not-allowed;">You haven't accepted cookies</button>
 			<noscript>
-				If you have already accepted cookies, you are able to chang your mind. However, JavaScript must be enabled - and it isn't. Therefore, if you have disabled JavaScript, please re-enable it. 
+				If you have already accepted cookies, you are able to chang your mind. However, JavaScript must be enabled - and it isn't. Therefore, if you have disabled JavaScript, please re-enable it.
 				If you are unsure what Javascript is, or have not disabled it, you are probably viewing this page on an older computer, in which case please upgrade to a newer device.
 			</noscript>
 			<footer>
