Make sure window is loaded before running JS

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			// SCROLL UP BUTTON END //
 		</script>
 	</head>
-	<body>
+	<body onload="test()">
 		<div id='nav'>
 			<a href="/" style="text-decoration: none;">
 				<nav>
