--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 					<a class="twitter-timeline" href="https://twitter.com/blackthunderfll?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a>
 				</div>
 				<noscript>
-					<a class='top-scroll-button' href="#top"><img alt='Scroll to top' src='/assets/arrow.png'/></a>
+					<a class='top-scroll-button' href="#top"><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
 				</noscript>
-				<a href="javascript:" class='top-scroll-button'><img alt='Scroll to top' src='/assets/arrow.png'/></a>
+				<a href="javascript:" class='top-scroll-button'><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
 				<footer>
 					&copy; Copyright Black Thunder FLL 2018 | <a href="/privacy-policy">Privacy Policy</a>
 				</footer>
