--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 				</a>
 			</div>
 			<h1>
-				Welcome
+				<noscript>
+					Welcome
+				</noscript>
 			</h1>
 			<p id='typedText'>
 				<noscript>
