Change animations Fade in each paragraph instead of typing

--- a/index.html
+++ b/index.html
@@ -73,21 +73,25 @@
 					<span class="line -bottom"></span>
 				</a>
 			</div>
-			<h1>
+			<h1 id="title">
 				<noscript>
 					Welcome
 				</noscript>
 			</h1>
-			<p id='typedText'>
-				<noscript>
+			<p id='mainContent'>
+				<span>
 					We are Black Thunder: a FIRST LEGO League team from Reading School, UK. We are a group of around 40 11-16 year olds who enjoy robotics, and meet each Friday after school, to work on robot-related tasks; one of them is the FLL.
-					<br>
-					<br>
+				</span>
+				<br>
+				<br>
+				<span>
 					We have a blog, YouTube channel and Twitter feed; our YouTube channel and Twitter feed can be seen below.
-					<br>
-					<br>
+				</span>
+				<br>
+				<br>
+				<span>
 					To contact us, please email us at <a href="mailto:contact@blackthunderfll.ga">contact@blackthunderfll.ga</a>.
-				</noscript>
+				</span>
 			</p>
 			<noscript>
 				<style>
@@ -97,9 +101,9 @@
 						opacity: 1;
 						display: block;
 					}
-					#typedText {
-						margin-bottom: 0;
-					}
+					/* #mainContent {
+						margin-bottom: 15px;
+					} */
 				</style>
 			</noscript>
 			<div class='YTContainer'>
