Remove redundant code

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			// SCROLL UP BUTTON END //
 		</script>
 	</head>
-	<body onload="test()">
+	<body>
 		<div id='nav'>
 			<a href="/" style="text-decoration: none;">
 				<nav>
