Move YouTube channel down slightly

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 						opacity: 1;
 						display: block;
 					}
-					/* #mainContent {
-						margin-bottom: 15px;
-					} */
+					#mainContent {
+						margin-bottom: 30px;
+					}
 				</style>
 			</noscript>
 			<div class='YTContainer'>
