--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@
 					$('.top-scroll-button').fadeOut(500);
 				}
 			});
-			$('.top-scroll-button').click(function() {
+			function scrollUp() {
 				$('body,html').animate({
 					scrollTop : 0
 				}, 500);
-			});
+			}
 
 			// SCROLL UP BUTTON END //
 		</script>
 	</head>
 	<body>
+		<a id="top"></a>
 		<div id='nav'>
 			<a href="/" style="text-decoration: none;">
 				<nav>
@@ -114,7 +115,7 @@
 				<noscript>
 					<a class='top-scroll-button' href="#top"><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
 				</noscript>
-				<a href="javascript:" class='top-scroll-button'><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
+				<a href="javascript:scrollUp()" class='top-scroll-button'><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
 				<footer>
 					&copy; Copyright Black Thunder FLL 2018 | <a href="/privacy-policy">Privacy Policy</a>
 				</footer>
