Revert attempted efficiency improvements Give up on trying to retrieve title from HTML

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 				</a>
 			</div>
 			<h1 id="title">
-				Welcome
+				<noscript>
+					Welcome
+				</noscript>
 			</h1>
 			<p id='mainContent'>
 				<span>
