Make animations more efficient Use transform instead of position

--- a/index.html
+++ b/index.html
@@ -95,13 +95,11 @@
 			<noscript>
 				<style>
 					.YTContainer {
-						position: relative;
-						top: 0px;
-						opacity: 1;
-						display: block;
-					}
-					#mainContent {
-						margin-bottom: 30px;
+						transform: translateY(30vh);
+						animation-name: moveContent;
+						animation-duration: 1s;
+						animation-fill-mode: forwards;
+						opacity: 0;
 					}
 				</style>
 			</noscript>
