--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Global site tag (gtag.js) - Google Analytics  END-->
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="/assets/roboto-mono.css" rel="stylesheet">
+		<link href="/assets/montserrat.css" rel="stylesheet">
 		<title>Black Thunder FLL</title>
 		<meta charset="utf-8"/>
 		<meta name="description" content="Black Thunder: A FLL team from Reading School, UK">
