Fix no JS animation bug & move YT channel down slightly

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			<noscript>
 				<style>
 					.YTContainer {
-						transform: translateY(30vh);
+						top: 30vh;
 						animation-name: moveContent;
 						animation-duration: 1s;
 						animation-fill-mode: forwards;
