Fix Twitter timeline after username changed

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<div class='YTContainer'>
 				<iframe id='YTChannel' src="https://www.youtube.com/embed/?listType=playlist&list=UUJP8htcgaZxm28hY3yX6WBw&autoplay=0" frameborder="0" allowfullscreen></iframe>
 				<div id='twitterContainer'>
-					<a class="twitter-timeline" href="https://twitter.com/blackthunderfll?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a>
+					<a class="twitter-timeline" data-lang="en" data-dnt="true" data-link-color="#ffc105" href="https://twitter.com/rs_blackthunder?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a>
 				</div>
 				<noscript>
 					<a class='top-scroll-button' href="#top"><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
