Change domain name

--- a/cookieSplash/index.html
+++ b/cookieSplash/index.html
@@ -41,7 +41,7 @@
 		</div>
 		<main>
 			<div class="fancy-button">
-				<a href="https://blog.blackthunderfll.ga/">
+				<a href="https://blog.blackthunder.ga/">
 					<span class="text">Blog</span>
 					<span class="line -right"></span>
 					<span class="line -top"></span>
