--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		</div>
 		<main>
 			<div class="fancy-button">
-				<a href="https://blog.blackthunderfll.ga/">
+				<a href="https://blog.blackthunder.ga/">
 					<span class="text">Blog</span>
 					<span class="line -right"></span>
 					<span class="line -top"></span>
@@ -89,7 +89,7 @@
 				<br>
 				<br>
 				<span>
-					To contact us, please email us at <a href="mailto:contact@blackthunderfll.ga">contact@blackthunderfll.ga</a>.
+					To contact us, please email us at <a href="mailto:contact@blackthunder.ga">contact@blackthunder.ga</a>.
 				</span>
 			</p>
 			<noscript>
