--- a/dev/index.html
+++ b/dev/index.html
@@ -56,7 +56,7 @@
             width: 100vw;
         }
 
-        a {
+        #nav-fade a {
             text-align: center;
             display: inline-block;
             width: 25%;
@@ -77,7 +77,7 @@
             margin-left: 75%;
         }
 
-        hr {
+        #nav-fade hr {
             height: .25rem;
             width: 25%;
             margin: 0;
@@ -95,15 +95,15 @@
 					<img class='logo1' src='/graphics/logoleft.png'>
 					<img class='logo2' src='/graphics/logo.png'>
 				</nav>
+                <div class='nav-fade' id='nav-fade'>
+                    <a class="one" href="#">Uno</a><!--
+                  --><a class="two" href="#">Dos</a><!--
+                  --><a class="three" href="#">Tres</a><!--
+                  --><a class="four" href="#">Quatro</a>
+                  <hr/>
+                </div>
 			</a>
 		</div>
-        <div class='nav-fade' id='nav-fade'>
-            <a class="one" href="#">Uno</a><!--
-          --><a class="two" href="#">Dos</a><!--
-          --><a class="three" href="#">Tres</a><!--
-          --><a class="four" href="#">Quatro</a>
-          <hr/>
-        </div>
 		<main>
 			<div class="fancy-button">
 				<a href="https://blog.blackthunder.ga/">
