Make links work

--- a/dev/index.html
+++ b/dev/index.html
@@ -56,7 +56,7 @@
             width: 100vw;
         }
 
-        #nav-fade a {
+        .one, .two, .three, .four {
             text-align: center;
             display: inline-block;
             width: 25%;
