Fix moving separator used to indicate current content (in nav)

--- a/dev/index.html
+++ b/dev/index.html
@@ -77,9 +77,10 @@
             margin-left: 75%;
         }
 
-        #nav-fade hr {
+        hr {
             height: .25rem;
             width: 25%;
+            margin: 0;
             background: #ffc105;
             border: none;
             transition: .3s ease-in-out;
