Change links in nav

--- a/dev/index.html
+++ b/dev/index.html
@@ -96,24 +96,15 @@
 					<img class='logo2' src='/graphics/logo.png'>
 				</nav>
                 <div class='nav-fade' id='nav-fade'>
-                    <a class="one" href="#">Uno</a><!--
-                  --><a class="two" href="#">Dos</a><!--
-                  --><a class="three" href="#">Tres</a><!--
-                  --><a class="four" href="#">Quatro</a>
+                    <a class="one" href="/fll">FLL</a><!--
+                  --><a class="two" href="/pi-wars">Pi Wars</a><!--
+                  --><a class="three" href="https://blog.blackthunder.ga">Blog</a><!--
+                  --><a class="four" href="/privacy-policy">Privacy Policy</a>
                   <hr/>
                 </div>
 			</a>
 		</div>
 		<main>
-			<div class="fancy-button">
-				<a href="https://blog.blackthunder.ga/">
-					<span class="text">Blog</span>
-					<span class="line -right"></span>
-					<span class="line -top"></span>
-					<span class="line -left"></span>
-					<span class="line -bottom"></span>
-				</a>
-			</div>
 			<h1 id="title">
 				<noscript>
 					Welcome
