--- a/dev/index.html
+++ b/dev/index.html
@@ -62,7 +62,8 @@
             width: 25%;
             padding: .75rem 0;
             margin: 0;
-            text-decoration: none;
+            text-decoration: none;.
+            color: #ffc105;
         }
 
         .two:hover ~ hr {
