Remove redundant code

--- a/dev/index.html
+++ b/dev/index.html
@@ -59,7 +59,7 @@
 					<img class='logo1' src='/graphics/logoleft.png'>
 					<img class='logo2' src='/graphics/logo.png'>
 				</nav>
-                <div class='nav-fade' id='nav-fade'>
+                <div class='nav-fade'>
                     <a class="one" href="/fll">FLL</a><!--
                   --><a class="two" href="/pi-wars">Pi Wars</a><!--
                   --><a class="three" href="https://blog.blackthunder.ga">Blog</a><!--
