Create new website structure and add links to social media & YouTube

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -3,15 +3,16 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="/assets/montserrat.css" rel="stylesheet">
-		<title>Privacy Policy | Black Thunder FLL</title>
+		<title>Privacy Policy | Black Thunder</title>
 		<meta charset="utf-8"/>
-		<meta name="description" content="Black Thunder: A FLL team from Reading School, UK">
+		<meta name="description" content="Black Thunder: a robotics club from Reading School, UK that competes in the FLL & Pi Wars">
 		<meta name='author' content='Black Thunder'/>
 		<link rel="shortcut icon" href="/graphics/logo-round.ico" />
 		<script src="/assets/jquery-3.2.1.min.js"></script>
 		<script src="/assets/cookies.js"></script>
 		<script src="/assets/privacy-policy.js"></script>
 		<link rel="stylesheet" type="text/css" href="/assets/global.css">
+		<link rel="stylesheet" type="text/css" href="/assets/privacy-policy.css">
 		<script>
 			function removeCookies() {
 				Cookies.remove("blackThunderCookiePolicy__Accepted");
@@ -26,28 +27,16 @@
 					<img class='logo1' src='/graphics/logoleft.png'>
 					<img class='logo2' src='/graphics/logo.png'>
 				</nav>
-				<div class='nav-fade'></div>
+				<div class='nav-fade'>
+                    <a class="one" href="/fll">FLL</a><!--
+                  --><a class="two" href="/pi-wars">Pi Wars</a><!--
+                  --><a class="three" href="https://blog.blackthunder.ga">Blog</a><!--
+                  --><a class="four" href="/privacy-policy">Privacy Policy</a>
+                  <hr/>
+                </div>
 			</a>
 		</div>
 		<main style="text-align:left;">
-			<div class="fancy-button">
-				<a href="/">
-					<span class="text">Home</span>
-					<span class="line -right"></span>
-					<span class="line -top"></span>
-					<span class="line -left"></span>
-					<span class="line -bottom"></span>
-				</a>
-			</div>
-			<div class="fancy-button">
-				<a href="https://blog.blackthunder.ga/">
-					<span class="text">Blog</span>
-					<span class="line -right"></span>
-					<span class="line -top"></span>
-					<span class="line -left"></span>
-					<span class="line -bottom"></span>
-				</a>
-			</div>
 			<h1>
 				Privacy Policy
 			</h1>
