--- a/fll/index.html
+++ b/fll/index.html
@@ -14,22 +14,22 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="/assets/montserrat.css" rel="stylesheet">
-		<title>Black Thunder FLL</title>
+		<title>FLL | Black Thunder</title>
 		<meta charset="utf-8"/>
-		<meta name="description" content="Black Thunder: A FLL team from Reading School, UK">
+		<meta name="description" content="Black Thunder: a robotics club from Reading School, UK that competes in the FLL & Pi Wars">
 		<meta name='author' content='Black Thunder'/>
 		<link rel="shortcut icon" href="/graphics/logo-round.ico" />
 		<script src="/assets/jquery-3.2.1.min.js"></script>
-		<script src='/assets/home.js'></script>
+		<script src='/assets/fll.js'></script>
 		<script src="/assets/cookies.js"></script>
 		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a604622fcaa9380"></script>
-		<link rel="stylesheet" type="text/css" href="/assets/home.css">
+		<link rel="stylesheet" type="text/css" href="/assets/fll.css">
 		<link rel="stylesheet" type="text/css" href="/assets/global.css">
 		<script>
 			// CHECK COOKIE POLICY HAS BEEN ACCEPTED //
 			if(Cookies.get("blackThunderCookiePolicy__Accepted") != "true") {
-				window.location = "/cookieSplash"
+				window.location = "/cookie-splash"
 			}
 			// END OF COOKIE POLICY CHECK //
 
@@ -71,17 +71,19 @@
 		<main>
 			<h1 id="title">
 				<noscript>
-					Welcome: FLL
+					Welcome
+					<br>
+					FLL
 				</noscript>
 			</h1>
 			<p id='mainContent'>
 				<span>
-					We are Black Thunder: a FIRST LEGO League team from Reading School, UK. We are a group of around 40 11-16 year olds who enjoy robotics, and meet each Friday after school, to work on robot-related tasks; one of them is the FLL.
+					We are Black Thunder: a robotics club from Reading School, UK. We are a group of around 40 11-16 year olds who enjoy robotics, and meet each Friday after school, to work on robot-related tasks, including the FIRST LEGO League and Pi Wars.
 				</span>
 				<br>
 				<br>
 				<span>
-					We have a blog, YouTube channel and Twitter feed; our YouTube channel and Twitter feed can be seen below.
+					We have a blog, <a href="https://www.youtube.com/channel/UCJP8htcgaZxm28hY3yX6WBw">YouTube channel</a> and <a href="https://www.instagram.com/rs_blackthunder">Instagram</a> & <a href="https://www.twitter.com/rs_blackthunder">Twitter</a> feeds; please follow and subscribe to us. Our social media handle is rs_blackthunder. We have embedded these feeds below.
 				</span>
 				<br>
 				<br>
@@ -89,17 +91,6 @@
 					To contact us, please email us at <a href="mailto:contact@blackthunder.ga">contact@blackthunder.ga</a>.
 				</span>
 			</p>
-			<noscript>
-				<style>
-					.YTContainer {
-						top: 30vh;
-						animation-name: moveContent;
-						animation-duration: 1s;
-						animation-fill-mode: forwards;
-						opacity: 0;
-					}
-				</style>
-			</noscript>
 			<div class='YTContainer'>
 				<iframe id='YTChannel' src="https://www.youtube.com/embed/?listType=playlist&list=UUJP8htcgaZxm28hY3yX6WBw&autoplay=0" frameborder="0" allowfullscreen></iframe>
 				<div id='twitterContainer'>
