--- a/fll/index.html
+++ b/fll/index.html
@@ -24,8 +24,6 @@
 		<script src="/assets/cookies.js"></script>
 		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a604622fcaa9380"></script>
-		<script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'dBWiunOsB0vF9i2hnq'});Pixlee.addSimpleWidget({widgetId:'8421'});};</script>
-		<script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 		<link rel="stylesheet" type="text/css" href="/assets/fll.css">
 		<link rel="stylesheet" type="text/css" href="/assets/global.css">
 		<script>
@@ -99,7 +97,7 @@
 				<div id='twitterContainer'>
 					<a class="twitter-timeline" data-lang="en" data-dnt="true" data-link-color="#ffc105" href="https://twitter.com/rs_blackthunder?ref_src=twsrc%5Etfw">Whoops! Something seems to have gone wrong! Click here to open our Twitter feed in a new tab.</a>
 				</div>
-				<div id="pixlee_container"></div>
+				<div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'dBWiunOsB0vF9i2hnq'});Pixlee.addSimpleWidget({widgetId:'8421'});};</script><script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 				<noscript>
 					<a class='top-scroll-button' href="#top"><img alt='Scroll to top' src='/graphics/arrow.png'/></a>
 				</noscript>
